<resources>
    <string name="app_name" translatable="false">Kit4</string>
    <string name="frag_ch">Switch fragment</string>
    <string name="newAct">Another activity</string>

    <string name="solve_btn">Get total</string>
    <string name="num1">Number 1</string>
    <string name="num2">Number 2</string>
    <string name="total">Total</string>

    <string name="wish_btn">Sort it!</string>
    <string name="resultView">Result</string>
    <string name="name">Data for sort</string>

    <string name="warningStr">Please enter something</string>
    <string name="warningNum">Please enter both numbers</string>

    <string name="opHis">Open history</string>
    <string name="info">Information</string>

    <string name="btn_Start">Start service</string>
    <string name="btn_End">Stop service</string>
    <string name="opServ">Open service</string>
    <string name="startServ">Service started</string>
    <string name="stopServ">Service stopped</string>
    <string name="alrStartServ">Service already started</string>
    <string name="alrStopServ">Service already stopped</string>
    <string name="opBrows">Open</string>
    <string name="forLink">Wtite a link</string>
    <string name="open_brows_item">Open browser</string>

    <string name="file_content_btn">Show file content</string>
    <string name="open_filecontent">Open file activity</string>
    <string name="op_datbase_act">Open Database Activity</string>
    <string name="op_shref_act">Open SharedReference Activity</string>
    <string name="showDB">Show DataBase</string>
    <string name="clearDB">Delete all</string>
    <string name="clearScr">Clear Screen</string>

    <string-array name="sh_pref_theme">
        <item>Blue</item>
        <item>Green</item>
    </string-array>
    <string name="pref_thema_key" translatable="false">theme_key</string>
    <string name="pref_thema_title">Theme</string>
    <string name="pref_thema_dialog">Choose theme?</string>
    <string name="pref_thema_default" translatable="false">Blue</string>

    <string name="cat1_anim">Animation 1</string>
    <string name="cat2_anim">Animation 2</string>
    <string name="op_animate_act">Graphic</string>
</resources>