<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/for_num1"
        android:layout_width="94dp"
        android:layout_height="44dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/num1"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/for_num2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultView" />

    <EditText
        android:id="@+id/for_num2"
        android:layout_width="94dp"
        android:layout_height="44dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="70dp"
        android:ems="10"
        android:hint="@string/num2"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/for_num1"
        app:layout_constraintTop_toBottomOf="@+id/resultView" />

    <TextView
        android:id="@+id/resultView"
        android:layout_width="271dp"
        android:layout_height="39dp"
        android:layout_marginTop="48dp"
        android:text="@string/total"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="269dp"
        android:layout_height="44dp"
        android:layout_marginTop="28dp"
        android:text="@string/solve_btn"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/for_num2" />
</androidx.constraintlayout.widget.ConstraintLayout>