<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DBActivity">

    <Button
        android:id="@+id/show_base"
        android:layout_width="249dp"
        android:layout_height="49dp"
        android:layout_marginTop="28dp"
        android:text="@string/showDB"
        android:textColor="@color/white"
        app:backgroundTint="#7E000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/clear_base"
        android:layout_width="249dp"
        android:layout_height="46dp"
        android:layout_marginTop="4dp"
        android:text="@string/clearDB"
        app:backgroundTint="#7E8A0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_base" />

    <Button
        android:id="@+id/clear_screen"
        android:layout_width="251dp"
        android:layout_height="52dp"
        android:layout_marginTop="4dp"
        android:text="@string/clearScr"
        android:textColor="@color/black"
        app:backgroundTint="@color/material_on_primary_emphasis_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clear_base" />

    <TextView
        android:id="@+id/db_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clear_screen" />

</androidx.constraintlayout.widget.ConstraintLayout>